Tue Sep 24 16:35:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#EnumKey):
	  size of the name is in WCHARs, not in bytes.

Tue Sep 24 14:07:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* gc.c (free_method_cache_entry_i): unused function

	* gc.c (rb_free_mc_table): ditto

	* internal.h (method_cache_entry_t): unused struct

	* vm_method.c (verify_method_cache): remove unused variable

	* vm_method.c (rb_method_entry): ditto

Tue Sep 24 14:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c (class_alloc): remove mc_tbl

	* gc.c (obj_free): ditto

	* internal.h (struct rb_classext_struct): ditto

	* method.h (rb_method_entry): remove ent param

	* vm_method.c: restore the global method cache. Per class cache tables
	  turned out to be far too slow.

	  [ruby-core:57289] [Bug #8930]

Tue Sep 24 12:51:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API): need
	  Constants.

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#EnumValue):
	  size of the name is in WCHARs, not in bytes.

Mon Sep 23 22:16:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/encdb.c, enc/utf_16_32.h (ENC_DUMMY_UNICODE): Unicode with BOM
	  must be based on big endian variants, so that actual encodings would
	  work.  [ruby-core:57318] [Bug #8940]

Mon Sep 23 12:11:26 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (env_each_pair): do not call rb_assoc_new() if
	  it isn't needed.

Mon Sep 23 10:42:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_module.rb (TestModule#test_include_toplevel): test
	  for top level main.include.  based on a part of the patch by
	  kyrylo at [GH-395].

Mon Sep 23 05:07:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_ary_cat): move from internal.h, since it
	  is described in README.EXT.

Sun Sep 22 20:55:20 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
